# probe-gl

./: .gitignore  CMakeLists.txt  README.md  global-illum.cpp  vcpkg.json
Assets/Shaders/: main.gs.hlsl  main.ps.hlsl  main.ps_old.hlsl  main.vs.hlsl  shadow.vs.hlsl  sky.ps.hlsl  sky.vs.hlsl
Assets/Textures/: packed_probe.json
Headers/: Application.hpp  Camera.hpp  D3D11Application.hpp  D3DBufferDefs.hpp  GeometryDefs.hpp  ImGuiMenu.hpp  InputHandler.hpp  ResourceLoader.hpp  ShaderCollection.hpp
src/: Application.cpp  Camera.cpp  D3D11Application.cpp  D3DBufferDefs.cpp  GeometryDefs.cpp  ImGuiMenu.cpp  InputHandler.cpp  ResourceLoader.cpp  ShaderCollection.cpp  imgui.ini
